<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGameID"
            android:layout_width="0dp"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_id" />

        <TextView
            android:id="@+id/tvHomeTeam"
            android:textSize="10sp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/home_team" />

        <TextView
            android:id="@+id/tvAwayTeam"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/away_team" />

        <TextView
            android:id="@+id/tvDate"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tvTime"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tvStadium"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stadium" />

    </LinearLayout>
</LinearLayout>