<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"

    tools:context=".team.TeamMainPage">

    <LinearLayout
        android:id="@+id/llLeagueHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivSponsor"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/viterralogo" />

        <ImageView
            android:id="@+id/ivTeamLogo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:src="@drawable/leagueoneprairies" />

        <Button
            android:id="@+id/btnOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10sp"
            android:text="@string/select_team" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llScoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="10dp">

        <TextView
            android:id="@+id/tvScoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_schedule"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            id="@+id/rvScoreboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTeamRoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="10dp">

        <TextView
            android:id="@+id/tvTeamRoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_roster"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTeamRoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTeamNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="10dp">

        <TextView
            android:id="@+id/tvTeamNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_news"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTeamNews"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>